@@ -1,0 +1,3 @@
+#!/bin/sh
+
+./dfsch-repl $srcdir/scm/test.scm
